--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ coverage/
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 
+**/android/**/google-services.json
