--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.3
   google_fonts: ^2.1.0
+  firebase_crashlytics: ^2.1.1
+  firebase_core: "^1.4.0"
 
 dev_dependencies:
   flutter_test:
